# hx-math

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp  main.h
src/: aabb.cpp  aabb.h  euler6.h  hxMath.h  mat.cpp  mat.h  ray.h  ray4.h  vec.cpp  vec.h
